--- a/src/app/components/expense/expense.component.html
+++ b/src/app/components/expense/expense.component.html
@@ -1,1 +1,41 @@
-<p>expense works!</p>
+<div>
+    <div nz-row>
+        <div nz-col nzFlex="2">
+            <nz-card nzType="inner" style="margin-top: 16px;" nzTitle="Post new Expense">
+                <form nz-form [formGroup]="expenseForm" (ngSubmit)="submitForm()" class="custom-form">
+                    <nz-form-item>
+                        <nz-form-control nzErrorTip="Please input title!">
+                            <input type="text" nz-input formControlName="title" placeholder="Enter expense title" />
+                        </nz-form-control>
+                    </nz-form-item>
+                    <nz-form-item>
+                        <nz-form-control nzErrorTip="Please input amount!">
+                            <input type="number" nz-input formControlName="amount" placeholder="Enter expense amount" />
+                        </nz-form-control>
+                    </nz-form-item>
+                    <nz-form-item>
+                        <nz-form-control nzErrorTip="Please input date!">
+                            <nz-date-picker style="width: 100%;" formControlName="date"></nz-date-picker>
+                        </nz-form-control>
+                    </nz-form-item>
+                    <nz-form-item>
+                        <nz-form-control nzErrorTip="Please input description!">
+                            <textarea nz-input placeholder="Enter description" [nzAutosize]="{ minRows: 2, maxRows: 6}"
+                            formControlName="description"></textarea>
+                        </nz-form-control>
+                    </nz-form-item>
+                    <nz-form-item>
+                        <nz-form-control nzErrorTip="Please input title">
+                            <nz-select nzAllowClear nzPlaceHolder="Select the category" formControlName="category">
+                                <nz-option *ngFor="let category of listOfCategory" [nzLabel]="category" [nzValue]="category"></nz-option>
+                            </nz-select>
+                        </nz-form-control>
+                    </nz-form-item>
+                    <button nz-button nzType="primary" nzBlock [disabled]="expenseForm.invalid" class="w-100">
+                        Add Expense
+                    </button>
+                </form>
+            </nz-card>
+        </div>
+    </div>
+</div>
