--- a/src/app/components/expense/expense.component.html
+++ b/src/app/components/expense/expense.component.html
@@ -1,7 +1,7 @@
 <div>
     <div nz-row>
         <div nz-col nzFlex="2">
-            <nz-card nzType="inner" style="margin-top: 16px;" nzTitle="Post new Expense">
+            <nz-card nzType="inner" style="margin-top: 16px;" nzTitle="Add new Expense">
                 <form nz-form [formGroup]="expenseForm" (ngSubmit)="submitForm()" class="custom-form">
                     <nz-form-item>
                         <nz-form-control nzErrorTip="Please input title!">
@@ -35,6 +35,32 @@
                         Add Expense
                     </button>
                 </form>
+            </nz-card>
+        </div>
+
+        <div nz-col nzFlex="3" style="margin-left: 20px;">
+            <nz-card nzType="inner" style="margin-top: 16px;" nzTitle="Expenses Record">
+                <div nz-card-grid style="width: 100%" *ngFor="let expense of expenses">
+                    <div nz-row>
+                        <div nz-col nzSpan="18">
+                            <span nz-icon nzType="message" nzTheme="outline"></span>
+                            {{expense.title}}
+                            -
+                            <span nz-icon nzType="dollar" nzTheme="outline"></span>
+                            {{expense.amount}}
+                            -
+                            <span nz-icon nzType="clock-circle" nzTheme="outline"></span>
+                            {{expense.date}}
+                            -
+                            <span nz-icon nzType="comment" nzTheme="outline"></span>
+                            {{expense.category}}
+                        </div>
+                        <div nz-col nzSpan="6" style="font-size: 15px;">
+                            <span nz-icon nzType="edit" nzTheme="fill" style="color: blue;"></span>
+                            <span nz-icon nzType="delete" nzTheme="fill" style="color: red; margin-left: 10px;"></span>
+                        </div>
+                    </div>
+                </div>
             </nz-card>
         </div>
     </div>
