Created update expense

--- a/src/app/components/update-expenses/update-expenses.component.html
+++ b/src/app/components/update-expenses/update-expenses.component.html
@@ -1,7 +1,7 @@
 <div>
     <div nz-row>
         <div nz-col nzFlex="2">
-            <nz-card nzType="inner" style="margin-top: 16px;" nzTitle="Add new Expense">
+            <nz-card nzType="inner" style="margin-top: 16px;" nzTitle="Update Expense">
                 <form nz-form [formGroup]="expenseForm" (ngSubmit)="submitForm()" class="custom-form">
                     <nz-form-item>
                         <nz-form-control nzErrorTip="Please input title!">
@@ -32,37 +32,9 @@
                         </nz-form-control>
                     </nz-form-item>
                     <button nz-button nzType="primary" nzBlock [disabled]="expenseForm.invalid" class="w-100">
-                        Add Expense
+                        Update Expense
                     </button>
                 </form>
-            </nz-card>
-        </div>
-
-        <div nz-col nzFlex="3" style="margin-left: 20px;">
-            <nz-card nzType="inner" style="margin-top: 16px;" nzTitle="Expenses Record">
-                <div nz-card-grid style="width: 100%" *ngFor="let expense of expenses">
-                    <div nz-row>
-                        <div nz-col nzSpan="18">
-                            <span nz-icon nzType="message" nzTheme="outline"></span>
-                            {{expense.title}}
-                            -
-                            <span nz-icon nzType="dollar" nzTheme="outline"></span>
-                            {{expense.amount}}
-                            -
-                            <span nz-icon nzType="clock-circle" nzTheme="outline"></span>
-                            {{expense.date}}
-                            -
-                            <span nz-icon nzType="comment" nzTheme="outline"></span>
-                            {{expense.category}}
-                        </div>
-                        <div nz-col nzSpan="6" style="font-size: 15px;">
-                            <span nz-icon nzType="edit" nzTheme="fill" style="color: blue;"
-                            (click)="updateExpense(expense.id)"></span>
-                            <span nz-icon nzType="delete" nzTheme="fill" style="color: red; margin-left: 10px;" 
-                            (click)="deleteExpense(expense.id)"></span>
-                        </div>
-                    </div>
-                </div>
             </nz-card>
         </div>
     </div>
