--- a/src/app/components/update-incomes/update-incomes.component.html
+++ b/src/app/components/update-incomes/update-incomes.component.html
@@ -31,7 +31,7 @@
                             </nz-select>
                         </nz-form-control>
                     </nz-form-item>
-                    <button nz-button nzType="primary" nzBlock [disabled]="incomeForm.invalid" class="w-100">Add new income</button>
+                    <button nz-button nzType="primary" nzBlock [disabled]="incomeForm.invalid" class="w-100">Update income</button>
                 </form>
             </nz-card>
         </div>
