--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <nz-layout class="layout">
   <nz-sider>
     <div class="logo">
-      <img src="https://th.bing.com/th/id/R.36dc1c73196373d1a691afd8e889d830?rik=LsRoo1bG71b4dg&pid=ImgRaw&r=0" alt="Avatar" class="avatar">
+      <img src="https://th.bing.com/th/id/R.36dc1c73196373d1a691afd8e889d830?rik=LsRoo1bG71b4dg&pid=ImgRaw&r=0"
+        alt="Avatar" class="avatar">
       <div class="user-info">
         <strong>Hirumitha</strong>
       </div>
