--- a/src/app/components/update-expenses/update-expenses.component.html
+++ b/src/app/components/update-expenses/update-expenses.component.html
@@ -21,13 +21,14 @@
                     <nz-form-item>
                         <nz-form-control nzErrorTip="Please input description!">
                             <textarea nz-input placeholder="Enter description" [nzAutosize]="{ minRows: 2, maxRows: 6}"
-                            formControlName="description"></textarea>
+                                formControlName="description"></textarea>
                         </nz-form-control>
                     </nz-form-item>
                     <nz-form-item>
                         <nz-form-control nzErrorTip="Please input title">
                             <nz-select nzAllowClear nzPlaceHolder="Select the category" formControlName="category">
-                                <nz-option *ngFor="let category of listOfCategory" [nzLabel]="category" [nzValue]="category"></nz-option>
+                                <nz-option *ngFor="let category of listOfCategory" [nzLabel]="category"
+                                    [nzValue]="category"></nz-option>
                             </nz-select>
                         </nz-form-control>
                     </nz-form-item>
