--- a/src/app/components/update-incomes/update-incomes.component.html
+++ b/src/app/components/update-incomes/update-incomes.component.html
@@ -1,7 +1,7 @@
 <div>
     <div nz-row>
         <div nz-col nzFlex="2">
-            <nz-card nzType="inner" style="margin-top: 16px;" nzTitle="Add new Income">
+            <nz-card nzType="inner" style="margin-top: 16px;" nzTitle="Update Income">
                 <form nz-form [formGroup]="incomeForm" class="custom-form" (ngSubmit)="submitForm()">
                     <nz-form-item>
                         <nz-form-control nzErrorTip="Please input title!">
@@ -20,18 +20,20 @@
                     </nz-form-item>
                     <nz-form-item>
                         <nz-form-control nzErrorTip="Please add description!">
-                            <textarea nz-input placeholder="Enter description" [nzAutosize]="{ minRows: 2, maxRows: 6}" 
-                            formControlName="description"></textarea>
+                            <textarea nz-input placeholder="Enter description" [nzAutosize]="{ minRows: 2, maxRows: 6}"
+                                formControlName="description"></textarea>
                         </nz-form-control>
                     </nz-form-item>
                     <nz-form-item>
                         <nz-form-control nzErrorTip="Please select category!">
                             <nz-select nzAllowClear nzPlaceHolder="Select the category" formControlName="category">
-                                <nz-option *ngFor="let category of listOfCategory" [nzLabel]="category" [nzValue]="category"></nz-option>
+                                <nz-option *ngFor="let category of listOfCategory" [nzLabel]="category"
+                                    [nzValue]="category"></nz-option>
                             </nz-select>
                         </nz-form-control>
                     </nz-form-item>
-                    <button nz-button nzType="primary" nzBlock [disabled]="incomeForm.invalid" class="w-100">Update income</button>
+                    <button nz-button nzType="primary" nzBlock [disabled]="incomeForm.invalid" class="w-100">Update
+                        income</button>
                 </form>
             </nz-card>
         </div>
