--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -13,7 +13,9 @@
 
     <div nz-row style="margin-top: 20px;">
         <div nz-col nzFlex="1 1 200px">
-            <nz-card nzType="inner" nzTitle="Income Chart"></nz-card>
+            <nz-card nzType="inner" nzTitle="Income Chart">
+                <canvas #incomeLineChartRef></canvas>
+            </nz-card>
         </div>
         <div nz-col nzFlex="0 1 300px" style="margin-left: 15PX;">
             <nz-card nzType="inner" nzTitle="Recent history">
@@ -42,7 +44,9 @@
     </div>
     <div nz-row style="margin-top: 20px;">
         <div nz-col nzFlex="1 1 200px">
-            <nz-card nzType="inner" nzTitle="Expense Chart"></nz-card>
+            <nz-card nzType="inner" nzTitle="Expense Chart">
+                <canvas #expenseLineChartRef></canvas>
+            </nz-card>
         </div>
     </div>
 </div>
